project(make_image_insertions)
cmake_minimum_required(VERSION 2.8)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -Wall -DMAGICKCORE_HDRI_ENABLE=0 -DMAGICKCORE_QUANTUM_DEPTH=16")
aux_source_directory(. SRC_LIST)
find_package(GraphicsMagick COMPONENTS GraphicsMagick++ GraphicsMagick)
include_directories(${GraphicsMagick_INCLUDE_DIRS})
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} ${PNG_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${GraphicsMagick_LIBRARIES})
